添加程序时间估计

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,5 @@ add_executable(example src/examples/example.cpp)
 add_executable(example_without_fmcd src/examples/example_without_fmcd.cpp)
 add_executable(example_bulk_load src/examples/example_bulk_load.cpp)
 
-add_executable(testFMCD src/examples/test_insert_blank.cpp)
-add_executable(test_insert_blank src/examples/testFMCD.cpp)
+add_executable(test_insert_black src/examples/test_insert_blank.cpp)
+add_executable(testFMCD src/examples/testFMCD.cpp)
